--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - 'website/**'
+      - 'packages/website/**'
       - '.github/workflows/deploy-pages.yml'
   workflow_dispatch:
 
@@ -30,13 +30,16 @@ jobs:
         with:
           node-version: '20'
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+
       - name: Install dependencies
-        run: npm install
-        working-directory: website
+        run: pnpm install --frozen-lockfile
 
       - name: Build Astro site
-        run: npm run build
-        working-directory: website
+        run: pnpm --filter website build
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
@@ -44,7 +47,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: website/dist
+          path: packages/website/dist
 
   deploy:
     environment:
