--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,13 +24,13 @@ services:
       # - DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/...
     volumes:
       # Database persistence
-      - hsm-database:/app/data/db
+      - hsm-database:/app/prisma/data/db
       # Game server files
       - hsm-servers:/app/data/servers
       # Backup storage
       - hsm-backups:/app/data/backups
       # Application logs
-      - hsm-logs:/app/data/logs
+      - hsm-logs:/app/logs
       # SSL certificates (if using HTTPS)
       - hsm-certs:/app/data/certs
     healthcheck:
