--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,9 @@ services:
     container_name: hytale-server-manager
     restart: unless-stopped
     ports:
-      - "3001:3001"
+      - "0.0.0.0:3001:3001/tcp"
+      - "0.0.0.0:5520:5520/udp"
+      - "0.0.0.0:5520:5520/tcp""
     environment:
       # User/Group ID for file permissions (use `id` command to find yours)
       - PUID=1000
